--- a/Burgerking/Views/Shared/_BurgerkingLayout.cshtml
+++ b/Burgerking/Views/Shared/_BurgerkingLayout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Consumptie" asp-action="BurgerOverzicht">Burger overzicht</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Consumptie" asp-action="DessertOverzicht">Dessert overzicht</a>
+                        </li>
                     </ul>
                 </div>
             </div>
