Knoppen op index toegevoegd

--- a/Burgerking/Views/Home/Index.cshtml
+++ b/Burgerking/Views/Home/Index.cshtml
@@ -6,3 +6,21 @@
     <h1>Bij Burger King is echt iedereen welkom</h1>
     <p>Wij hebben alle vertrouwen in onze medewerkers dat ze je met de glimlach verwelkomen, bedienen en ervoor zorgen dat je na de maaltijd vertrekt met een glimlach op het gezicht. De ontvangst begint natuurlijk al bij het binnenkomen van het restaurant. Daarom zijn al onze restaurants toegankelijk voor de hele familie, en ook voor personen met een beperkte mobiliteit die zich in een rolstoel verplaatsen. Om elk moment bij Burger King zo aangenaam mogelijk te maken voor éénieder, zijn onze menu's ook beschikbaar in brailleschrift voor blinden of slechtzienden.'</p>
 </div>
+<div class="row">
+    <a class="text-primary" asp-area="" asp-controller="Consumptie" asp-action="BurgerOverzicht">
+        <div class="card m-4" style="width: 14rem;">
+            <img class="card-img-top" src="~/images/plantbasedwopper.png">
+            <div class="card-body text-center">
+                <h5 class="card-title">Bekijk onze burgers!</h5>
+            </div>
+        </div>
+    </a>
+    <a class="text-primary" asp-area="" asp-controller="Consumptie" asp-action="DessertOverzicht">
+        <div class="card m-4" style="width: 14rem;">
+            <img class="card-img-top" src="~/images/bkfusions.png">
+            <div class="card-body text-center">
+                <h5 class="card-title">Bekijk onze desserts!</h5>
+            </div>
+        </div>
+    </a>
+</div>
