- Migrations naar localdb mssqllocal uitgevoerd. - Details pagina voor Burgers en Desserts aangemaakt

--- a/Burgerking/Views/Consumptie/BurgerOverzicht.cshtml
+++ b/Burgerking/Views/Consumptie/BurgerOverzicht.cshtml
@@ -20,6 +20,7 @@
                         <li>@b.Vlees</li>
                     </ul>
                 </p>
+                <p><a asp-controller="Consumptie" asp-action="BurgerDetails" asp-route-id="@b.Id">Details</a></p>
             </div>
         </div>
     }
