--- a/Burgerking/Views/Consumptie/BurgerOverzicht.cshtml
+++ b/Burgerking/Views/Consumptie/BurgerOverzicht.cshtml
@@ -4,6 +4,16 @@
     ViewData["Title"] = "Index";
 }
 
+<form asp-controller="Consumptie" asp-action="SearchBurger" method="get">
+    <div class="form-actions no-color">
+        <p>
+            Zoek op Burgernaam:
+            <input asp-for="BurgerSearch" />
+            <input type="submit" value="Zoeken" class="btn btn-primary" />
+            <a class="ml-5" asp-controller="Consumptie" asp-action="BurgerOverzicht">Alle burgers</a>
+        </p>
+    </div>
+</form>
 <div class="row">
     @foreach (var b in Model.Burgers)
     {
