--- a/Burgerking/Views/Consumptie/DessertOverzicht.cshtml
+++ b/Burgerking/Views/Consumptie/DessertOverzicht.cshtml
@@ -4,6 +4,16 @@
     ViewData["Title"] = "Index";
 }
 
+<form asp-controller="Consumptie" asp-action="SearchDessert" method="get">
+    <div class="form-actions no-color">
+        <p>
+            Zoek op Dessertnaam:
+            <input asp-for="DessertSearch" />
+            <input type="submit" value="Zoeken" class="btn btn-primary" />
+            <a class="ml-5" asp-controller="Consumptie" asp-action="DessertOverzicht">Alle desserts</a>
+        </p>
+    </div>
+</form>
 <div class="row">
     @foreach (var d in Model.Desserts)
     {
@@ -14,7 +24,7 @@
                 <p class="card-text">Voor slechts @d.Prijs euro!</p>
                 <p class="card-text text-danger">@d.Soja(d.BevatSoja)</p>
                 <p class="card-text"><a asp-controller="Consumptie" asp-action="DessertDetails" asp-route-id="@d.Id">Details</a></p>
-            </div>            
+            </div>
         </div>
     }
 </div>
